kubernetes/src/services/go-backend/local/Deployment.go-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-backend
spec:
  template:
    spec:
      containers:
        - name: go-backend
          image: 857059614049.dkr.ecr.us-east-2.amazonaws.com/services/go-backend:local-version
