kubernetes/src/services/go-backend/local/Ingress.minimal-traefik.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-traefik
spec:
  rules:
    - host: "go-backend-kustomize.172-20-0-101.sslip.io"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: go-backend
                port:
                  number: 8080
